<resources>
    <!-- Xerneas' fonts! -->
    <!-- merienda -->
    <!-- kalam -->
    <!-- heebo -->
    <!-- voltaire -->
    <!-- sniglet -->

    <string name="app_name">Xerneas école en ligne</string>
    <string name="nom_ecole">Groupe Xerneas</string>
    <string name="desc_ecole">Accompagnement pédagogique pour les classes de la 6ème à la 3ème : cours en ligne et exercices</string>
    <string name="propos"><u>À propos</u></string>

    <!-- Text button -->
    <string name="inscription">Inscription</string>
    <string name="connexion">Connexion</string>
    <string name="eleve">Élève</string>
    <string name="parent">Parent</string>
    <string name="enseignant">Enseignant</string>
    <string name="valider">Valider</string>
    <string name="Suivant">Suivant</string>
    <string name="retour">Retour</string>

    <string name="aPropos">Projet Android : Alexandra COUNILLE et Aurélie GAYMU</string>
    <string name="contact"><u>Contactez-nous</u></string>
    <string name="contactTitle">Contactez-nous</string>
    <string name="popupInscription">Où souhaitez-vous vous rediriger ?</string>


    <string name="classes">Nos classes :</string>
    <string name="matieres">Les matières :</string>
    <string name="Francais">Français</string>
    <string name="Maths">Mathématiques</string>
    <string name="Langue_viv1">Langue Vivante 1</string>
    <string name="Langue_viv2">Langue Vivante 2</string>
    <string name="Histoire_geo">Histoire</string>
    <string name="SVT">SVT</string>
    <string name="physique">Physique-Chimie</string>
    <string name="techno">Technologies</string>

    <string name="donnees">Saisie de vos données</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="login">Login</string>
    <string name="mdp">Mot de passe</string>
    <string name="mail">Email</string>
    <string name="nb_enfant">Nombre d\'éleves</string>
    <string name="nb">Entrez un nombre</string>
    <string name="lien">Lien de parenté</string>
    <string name="niveauxScol">Niveau scolaire</string>
    <string name="envoyer">Envoyer</string>
    <string name="motDePasseOublie">Mot de passe oublié</string>

    <string name="homepage">Bienvenue</string>
    <string name="forgottenPW"><u>Mot de passe oublié ?</u></string>
    <string name="connex_eleve">Entrez votre identifiant élève :</string>
    <string name="connex_parent">Entrez votre identifiant parent :</string>
    <string name="ur">Je suis :</string>
    <string name="email">email</string>
    <string name="telephone">téléphone</string>

    <string name="donnees_enf">Données de l\'enfant </string>
    <string name="classe6e">Classe : 6ème</string>
    <string name="classe5e">Classe : 5ème</string>
    <string name="classe4e">Classe : 4ème</string>
    <string name="classe3e">Classe : 3ème</string>
    <string name="textMdp">Si vous êtes bien inscrit à notre application, un mail de vérification vous sera envoyé par mail afin de réinitialiser votre mot de passe.</string>
    <string name="title_activity_espace_eleve">ScrollingActivity</string>
    <string name="title_activity_espace_parents">ScrollingActivity</string>

    <string name="action_settings">Settings</string>
    <string name="espaceEleve">Espace Élève</string>
    <string name="espaceParent">Espace Parent</string>
    <string name="enTantQue">Connecté(e) en tant que : </string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="accueil">Accueil</string>
    <string name="inscriptionComplete">Inscription terminée</string>
    <string name="inscriptionFiniMsg">Votre inscription a bien été effectuée. Voici votre identifiant :</string>
    <string name="inscriptionidEnf">Voici les identifiants de vos enfants :</string>
    <string name="inscriptionRedirection"> Où souhaitez-vous vous rediriger ?</string>
    <string name="messageCoursLive">Votre cours a commencé, suivez ce lien pour y assister :</string>
    <string name="messagePasCoursLive">Il n\'y a pas de cours diffusé pour le moment.</string>
    <string name="lienZoomFictif">https://cours-fr.zoom.us/j/87518680026?pwd=VERVL05JYVhucXlCREQx</string>
    <string name="codeValidation">Code de validation</string>

    <string name="cours">Mes cours</string>
    <string name="exercices">Mes exercices</string>
    <string name="vousAcceptez">Vous acceptez de recevoir les identifiants de votre/vos enfant(s) : *</string>
    <string name="choixObligatoire">* Au moins un choix obligatoire parmi ceux proposés.</string>
    <string name="paiement">Paiement</string>
    <string name="accesRapide">Accès rapide</string>
    <string name="monprofil">Mon profil</string>
    <string name="terminer">Payer et terminer</string>
    <string name="coursETexercices">Cours et exercices</string>
    <string name="cours1maths">Cours 1 : Les fonctions.</string>
    <string name="cours2maths">Cours 2 : Les probabilités.</string>
    <string name="cours3maths">Cours 3 : Les statistiques.</string>
    <string name="q1maths">Quel est la solution de cette équation : 2x + 6 = 0 ?</string>
    <string name="q2maths">Quelle est la formule du théorème de Pythagore pour un triangle ABC, avec AB l\'hypothénus ?</string>
    <string name="cours1fr">Cours 1 : Grammaire.</string>
    <string name="cours2fr">Cours 2 : Conjugaison.</string>
    <string name="q1histoire">Quelle l\'année de debut de la 1ère guerre mondiale, ainsi que sa date de fin ?</string>
    <string name="cours2histoire">Cours 2 : 2ème Guerre Mondiale.</string>
    <string name="cours1histoire">Cours 1 : 1ère Guerre Mondiale.</string>
    <string name="cours1en">Cours 1 : Les modaux.</string>
    <string name="aucunExo">--- Aucun exercices ---</string>
    <string name="coursendirect">Cours en direct</string>
    <string name="progression">Progressions</string>
    <string name="recommandations">Recommandations</string>
    <string name="derniereCo">Dernière connexion</string>
    <string name="tableauDeBord">Tableau de bord</string>
    <string name="mesEnfants">Mes enfants</string>
    <string name="abonnement">Mon abonnement</string>
    <string name="coursExoParent">Cours et Exercices effectués</string>
    <string name="exoRealises">Exercices effectués : (terminés / vus)</string>
    <string name="recevoirCode">Les mots de passe de vos enfants vous sont envoyés par mail.</string>
    <string name="derniereCoEnf">Dernière connexion de votre enfant</string>
    <string name="aucuneCo">Aucune connexion recensée à ce jour.</string>
    <string name="defRappel">Définir un rappel</string>
    <string name="heure">Heure</string>
    <string name="minutes">Minutes</string>
    <string name="nomPts">Nom :</string>
    <string name="prenomPts">Prénom :</string>
    <string name="emailPts">Email :</string>
    <string name="modifier">Modifier</string>
    <string name="mdpPts">Mot de passe :</string>
    <string name="stars">******</string>
    <string name="annuler">Annuler</string>
    <string name="nouvelEmail">Veuillez entrer votre nouvel email</string>
    <string name="emailConfirm">Confirmez votre email</string>
    <string name="nouveauMdp">Veuillez entrer un nouveau mot de passe</string>

</resources>
