<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="20dp"
        android:orientation="horizontal"
        android:background="@color/x_blue100" >

        <ImageView
            android:id="@+id/retour"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:src="@drawable/arrow_back"
            android:clickable="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/motDePasseOublie"
            android:layout_toRightOf="@id/retour"
            android:textSize="30dp"
            android:textColor="@color/white" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="50dp"
        android:layout_below="@id/header" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/textMdp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:hint="@string/nom"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:hint="@string/prenom"
            />

        <EditText
            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:hint="@string/mail"
            />

        <Button
            android:id="@+id/envoyer"
            android:paddingHorizontal="20dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/envoyer"
            android:layout_gravity="bottom"
            android:textColor="@color/white"
            android:background="@drawable/button_blue_gradient"/>

    </LinearLayout>

</LinearLayout>