<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="20dp"
        android:orientation="horizontal"
        android:background="@color/x_blue100" >

        <ImageView
            android:id="@+id/retour"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:src="@drawable/arrow_back"
            android:clickable="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/inscription"
            android:layout_toRightOf="@id/retour"
            android:textSize="30dp"
            android:textColor="@color/white" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="30dp"
        android:layout_below="@id/header" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:text="@string/donnees"
            android:gravity="center"
            android:textSize="20dp"
            android:textColor="@color/x_blue100" />

        <EditText
            android:id="@+id/nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/nom"
            android:background="@drawable/edit_text"
            android:gravity="left"
            android:textSize="20dp"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/prenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/prenom"
            android:background="@drawable/edit_text"
            android:gravity="left"
            android:textSize="20dp"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/login"
            android:background="@drawable/edit_text"
            android:gravity="left"
            android:textSize="20dp"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/mdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/mdp"
            android:background="@drawable/edit_text"
            android:gravity="left"
            android:textSize="20dp"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/mail"
            android:background="@drawable/edit_text"
            android:gravity="left"
            android:textSize="20dp"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/enfants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/nb_enfant"
            android:background="@drawable/edit_text"
            android:gravity="left"
            android:textSize="20dp"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/valider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/valider"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:background="@drawable/button_blue_gradient" />

    </LinearLayout>

</LinearLayout>