<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="20dp"
        android:orientation="horizontal"
        android:background="@color/x_blue100" >

        <ImageView
            android:id="@+id/retour"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:src="@drawable/arrow_back"
            android:clickable="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/connexion"
            android:layout_toRightOf="@id/retour"
            android:textSize="30dp"
            android:textColor="@color/white" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="50dp"
        android:layout_below="@id/header" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:text="@string/connex_eleve"
            android:textSize="20dp"
            android:textColor="@color/x_blue100" />

        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit_text"
            android:hint="@string/login"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/mdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit_text"
            android:hint="@string/mdp"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/erreur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/errorRed" />


        <TextView
            android:id="@+id/forgottenPW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:textColor="@color/x_cyan150"
            android:text="@string/forgottenPW"
            android:clickable="true" />

        <Button
            android:id="@+id/valider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valider"
            android:background="@drawable/button_blue_gradient"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>