<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:foregroundGravity="right" >

                <RelativeLayout
                    android:id="@+id/coords"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/contact"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact"
                        android:layout_gravity="left"
                        android:textColor="@color/x_blue150"
                        android:clickable="true"
                        android:focusable="true"/>

                    <TextView
                        android:id="@+id/aPropos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/propos"
                        android:textColor="@color/x_blue150"
                        android:layout_marginBottom="20dp"
                        android:layout_gravity="left"
                        android:layout_below="@id/contact"
                        android:clickable="true"
                        android:focusable="true" />

                    <Button
                        android:id="@+id/connexion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_alignParentRight="true"
                        android:text="@string/connexion"
                        android:textColor="@color/white"
                        android:background="@drawable/button_blue_gradient" />

                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:theme="@style/Xerneas"
                android:textStyle="bold"
                android:text="@string/nom_ecole"
                android:textColor="@color/x_orange150"
                android:textSize="40dp" />

            <TextView
                android:id="@+id/classeSixieme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/matieres" />

            <ListView
                android:id="@+id/listeMatieres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />




            <Button
                android:id="@+id/inscription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:layout_marginHorizontal="30dp"
                android:text="@string/inscription"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"
                android:background="@drawable/button_blue_gradient" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>