<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    tools:context=".espaces.eleves.elementMenu.CoursLive">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:padding="20dp"
            android:orientation="horizontal"
            android:background="@color/x_blue100" >

            <ImageView
                android:id="@+id/deconnexion"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:src="@drawable/logout"
                android:clickable="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/espaceEleve"
                android:layout_toRightOf="@id/deconnexion"
                android:textSize="30dp"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/menu"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:src="@drawable/menu"
                android:layout_alignParentEnd="true"
                android:clickable="true"
                android:layout_alignParentRight="true" />

        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/header"
            android:layout_margin="20dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context=".espaces.eleves.elementMenu.CoursLive"
            tools:showIn="@layout/cours_live">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/enTantQue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enTantQue"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/loginName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/enTantQue"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/enTantQue"
                    android:layout_marginVertical="30dp"
                    android:text="Cours en direct :"
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/fr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/content"
                    android:textColor="@color/x_blue050"
                    android:textSize="20dp"
                    android:text="@string/Francais"
                    />

                <TextView
                    android:id="@+id/zoom1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/fr"
                    android:textSize="20dp"
                    android:textColor="@color/x_blue100"
                    android:text="@string/lienZoomFictif"
                    />

                <TextView
                    android:id="@+id/svt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/zoom1"
                    android:textColor="@color/x_blue050"
                    android:textSize="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/SVT"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/svt"
                    android:textColor="@color/x_orange150"
                    android:textSize="18dp"
                    android:text="@string/messagePasCoursLive"
                    />

            </RelativeLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/my_menu" />

</androidx.drawerlayout.widget.DrawerLayout>