<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="20dp"
        android:orientation="horizontal"
        android:background="@color/x_blue100" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/inscriptionComplete"
            android:textSize="30dp"
            android:textColor="@color/white" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="30dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/header" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="50dp"
            android:text="@string/inscriptionMsgComplete"
            android:gravity="center"
            android:textSize="20dp"
            android:textColor="@color/x_blue100" />


        <Button
            android:id="@+id/acceuil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="30dp"
            android:text="@string/accueil"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:background="@drawable/button_blue_gradient" />

        <Button
            android:id="@+id/connexion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="30dp"
            android:text="@string/connexion"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:background="@drawable/button_blue_gradient" />

    </LinearLayout>

</LinearLayout>